# mkdocs_rag

./: .gitignore  README.md  run.sh  setup.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  chat_history.db  config.py  main.py  pyproject.toml
backend/rag/: __init__.py  chat_db.py  ingestion.py  llm_providers.py  models.py  retriever.py  vector_store.py
backend/scripts/: index_docs.py  verify_system.py
backend/tests/: demo_questions.md  test_api.py  test_ingestion.py
frontend/: README.md  mkdocs.yml  requirements.txt
frontend/docs/: chat.md  index.md
frontend/docs/howtos/: access-requests.md  deployment.md
frontend/docs/js/: chat.js
frontend/docs/policies/: security.md
frontend/docs/runbooks/: database-maintenance.md  incident-response.md
notebooks/: 01_local_rag_no_cloud.ipynb  02_simple_vertex_ai_rag.ipynb
